[gd_scene load_steps=12 format=3 uid="uid://1do65m4q7ebv"]

[ext_resource type="Script" path="res://scripts/leaf_rb.gd" id="1_8114g"]
[ext_resource type="Texture2D" uid="uid://brnho5ms5q2rv" path="res://textures/leaf.png" id="2_fkcua"]
[ext_resource type="AudioStream" uid="uid://4hi2bhohy2tf" path="res://audio/hitFall.wav" id="3_lwt3y"]
[ext_resource type="Texture2D" uid="uid://dpga4j2rj5bmp" path="res://textures/up_arrow1.png" id="4_xwhqp"]
[ext_resource type="Texture2D" uid="uid://b0qa0v4rbmh75" path="res://textures/up_arrow2.png" id="5_wn8iu"]
[ext_resource type="Texture2D" uid="uid://n7bo37i002ih" path="res://textures/up_arrow3.png" id="6_jfpuj"]
[ext_resource type="AudioStream" uid="uid://sd8bkkuuhd34" path="res://audio/decay.wav" id="7_iuf66"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_qc277"]
bounce = 0.16

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_3jbh3"]
radius = 5.0
height = 21.0

[sub_resource type="CircleShape2D" id="CircleShape2D_78666"]
radius = 2.0

[sub_resource type="SpriteFrames" id="SpriteFrames_q0yln"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_xwhqp")
}, {
"duration": 1.0,
"texture": ExtResource("5_wn8iu")
}, {
"duration": 1.0,
"texture": ExtResource("6_jfpuj")
}],
"loop": true,
"name": &"default",
"speed": 2.0
}]

[node name="LeafRB" type="RigidBody2D" groups=["leaf"]]
input_pickable = true
mass = 0.01
physics_material_override = SubResource("PhysicsMaterial_qc277")
script = ExtResource("1_8114g")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(12, 1)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_3jbh3")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0.792157, 0.792157, 0.792157, 1)
z_index = 1
texture_filter = 1
position = Vector2(12, 0)
texture = ExtResource("2_fkcua")

[node name="Fall" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_lwt3y")
autoplay = true

[node name="Timer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true
autostart = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_78666")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
position = Vector2(12, 1)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_3jbh3")

[node name="TutorialArrow" type="AnimatedSprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
texture_filter = 1
rotation = -1.5708
sprite_frames = SubResource("SpriteFrames_q0yln")
frame_progress = 0.907287
offset = Vector2(2.08165e-12, -20)

[node name="DecayTimer" type="Timer" parent="."]
wait_time = 15.0
one_shot = true
autostart = true

[node name="decaysound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_iuf66")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
[connection signal="timeout" from="DecayTimer" to="." method="_on_decay_timer_timeout"]
